# portfoliomodels

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md  reports.md
book/docs/: api.html  api.md  index.html  marimo.html  marimo.md  reports.html
marimo/: __init__.html  demo.html
pdoc/: index.html  portfoliomodels.html  search.js
pdoc/portfoliomodels/: CVaRmodel.html  CVaRtargets.html  Clustering.html  MST.html  MVOlifecycleModel.html  MVOmodel.html  MVOtargets.html  ScenarioGeneration.html  add.html  dataAnalyser.html  glidePathCreator.html  main.html
src/portfoliomodels/: CVaRmodel.py  CVaRtargets.py  MVOlifecycleModel.py  MVOmodel.py  MVOtargets.py  ScenarioGeneration.py  main.py
src/tests/: conftest.py  test_2_cvar_model.py  test_3_mvo_model.py  test_trivial.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_1cee16c9010339f2_CVaRmodel_py.html  z_1cee16c9010339f2_CVaRtargets_py.html  z_1cee16c9010339f2_Clustering_py.html  z_1cee16c9010339f2_MST_py.html  z_1cee16c9010339f2_MVOlifecycleModel_py.html  z_1cee16c9010339f2_MVOmodel_py.html  z_1cee16c9010339f2_MVOtargets_py.html  z_1cee16c9010339f2_ScenarioGeneration_py.html  z_1cee16c9010339f2___init___py.html  z_1cee16c9010339f2_add_py.html  z_1cee16c9010339f2_dataAnalyser_py.html  z_1cee16c9010339f2_glidePathCreator_py.html  z_1cee16c9010339f2_main_py.html
tests/html-report/: report.html
