[project]
name = 'portfoliomodels'
version = "0.0.0"
description = "...Python package that provides a suite of mathematical models and tools for constructing and analyzing investment portfolios. It offers functions for asset allocation, risk assessment, optimization techniques, and performance evaluation, enabling users to develop and implement robust portfolio strategies."
authors = [{name='Petr Vanek', email= 'petrr.vanekk@mailinator.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.6.0",
    "ecos>=2.0.14",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=19.0.0",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
]

[project.urls]
repository = "https://github.com/VanekPetr/portfoliomodels"

[dependency-groups]
dev = [
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfoliomodels"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/portfoliomodels"
]

[tool.bandit]
exclude_dirs = ["tests"]
